--- a/src/stylesheets/SinglePost.css
+++ b/src/stylesheets/SinglePost.css
@@ -22,14 +22,13 @@
 #post-author-info {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 7.5rem;
 }
 
 #post-author-profile-pic {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  margin-right: 10px;
 }
 
 #post-time {
